--- a/front/truespotFront/src/app/components/topo/view-list-topo/view-list-topo.component.html
+++ b/front/truespotFront/src/app/components/topo/view-list-topo/view-list-topo.component.html
@@ -19,7 +19,7 @@
               <tr *ngFor="let topo of topos">
                 <td>{{topo.name}}</td>
                 <td>{{topo.department.id}} -  {{topo.department.name}}</td>
-                <td>{{topo.releaseDate | date:"dd/MM/yyyy"}}</td>
+                <td>{{topo.release_Date | date:"dd/MM/yyyy"}}</td>
                 <td>{{topo.name}}</td>
                 <td>{{topo.name}}</td>
                 <td>{{topo.name}}</td>
