--- a/front/truespotFront/src/app/components/topo/view-topo/view-topo.component.css
+++ b/front/truespotFront/src/app/components/topo/view-topo/view-topo.component.css
@@ -3,44 +3,17 @@ body {
   padding-right:30px;
 }
 
-table {
-  border-collapse: separate;
-  border-spacing: 0 5px;
-  padding: 0px;
+p {
+font-size: medium;
 }
 
 .Area {
-  background-color: #006DCC;
+  background-color: #005cbf;
   color: white;
 }
 .Road {
-  background-color: #006DCC;
+  background-color: #5a6268;
   color: white;
 }
 
-tr td:first-child,
-tr th:first-child {
-  border-top-left-radius: 6px;
-  border-bottom-left-radius: 6px;
-}
-
-tr td:last-child,
-tr th:last-child {
-  border-top-right-radius: 6px;
-  border-bottom-right-radius: 6px;
-}
-.clickableRow {
-  cursor: pointer;
-}
-
-textarea {
-  font-variant: small-caps !important;
-  text-rendering: auto;
-}
-td, th {
-  font-size: 8pt;
-}
-table {
-  padding: 0px;
-}
 
