--- a/front/truespotFront/src/app/components/user/view-myprofil/view-myprofil.component.html
+++ b/front/truespotFront/src/app/components/user/view-myprofil/view-myprofil.component.html
@@ -5,7 +5,7 @@
         <div class="well-title">
 
           <div class="card">
-            <div class="card-header">
+            <div class="card-header badge-primary">
               <h3>Mon compte :</h3>
             </div>
             <div class="card-body">
@@ -68,36 +68,6 @@
 
           </div>
           <br>
-
-          <div class="card">
-            <div class="card-header"><h3>Mes topos :</h3></div>
-          <div class="card-body">
-            <div class="card-deck">
-              <div class="card">
-                <div class="card-body">
-                    <table class="table">
-                      <tr>
-                        <th>Nom du topo</th>
-                        <th>Department</th>
-                        <th>Date de parution</th>
-                        <th>Disponible</th>
-
-                      </tr>
-                      <tr *ngFor="let topo of topos">
-                        <td>{{topo.name}}</td>
-                        <td>{{topo.department.id}} -  {{topo.department.name}}</td>
-                        <td>{{topo.releaseDate | date:"dd/MM/yyyy"}}</td>
-                        <td>{{topo.shared}}</td>
-                      </tr>
-                    </table>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-
-
-
 
         </div>
       </div>
